proje upload edildi

--- a/index.html
+++ b/index.html
@@ -1,12 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elisoft</title>
+    <title>Anasayfa</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+        integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
+
 <body>
-    
+    <div id="social">
+        <font>FENERBAHÇE | <span>Mazinde Bir Tarih Yatar...</span></font>
+        <i class="fab fa-searchengin"></i>
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-google"></i>
+    </div>
+
+    <div id="container">
+        <header>
+            <img id="headerresim" src="img/kupalar.jpg" alt="">
+            <div id="centered"><b><i> ŞAMPİYONLUKLARLA DOLU FENERBAHÇE TARİHİ</i> </b></div>
+        </header>
+
+        <section>
+            <nav>
+                <ul>
+                    <li><a href="index.html"><i class="fas fa-home"></i> Ana Sayfa </a></li>
+                    <li><a href="futbol-kadin.html"><i class="fas fa-female"></i> Futbol Kadın <i class="fas fa-futbol"></i></a></li>
+                    <li><a href="futbol-erkek.html"><i class="fas fa-male"></i> Futbol Erkek <i class="fas fa-futbol"></i></a></li>
+                    <li><a href="basketbol-kadin.html"> <i class="fas fa-female"></i> </i> Basketbol Kadın <i  class="fas fa-basketball-ball"></i></a></li>
+                    <li><a href="basketbol-erkek.html"> <i class="fas fa-male"></i> </i> Basketbol Erkek <i class="fas fa-basketball-ball"></i></a></li>
+                </ul>
+            </nav>
+
+            <main>
+                <div class="icerik">
+                    <img src="img/kadinfutbol.jpg" class="icerikresim" alt="">
+                    <h5>Kadın Futbol Takımı</h5>
+                    <p class="iceriktext">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis sapiente consequatur optio
+                        blanditiis qui, dolorem maxime, reprehenderit facilis distinctio vitae, repudiandae magni
+                        voluptatum quis ad. Harum explicabo nisi soluta repudiandae quod at delectus minima voluptatum
+                        ipsam velit repellendus, amet expedita eligendi, optio reiciendis non molestias vitae fugiat
+                        fuga odit veritatis. Quidem at ex a voluptatum.
+                    </p>
+                    <a href="#" class="devamoku">Devamını Oku</a>
+                </div>
+
+                <div class="icerik">
+                    <img src="img/futbol-erkek.jpg" class="icerikresim2" alt="">
+                    <h5>Erkek Futbol Takımı</h5>
+                    <p class="iceriktext2">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis sapiente consequatur optio
+                        blanditiis qui, dolorem maxime, reprehenderit facilis distinctio vitae, repudiandae magni
+                        voluptatum quis ad. Harum explicabo nisi soluta repudiandae quod at delectus minima voluptatum
+                        ipsam velit repellendus, amet expedita eligendi, optio reiciendis non molestias vitae fugiat
+                        fuga odit veritatis. Quidem at ex a voluptatum.
+                    </p>
+                    <a href="#" class="devamoku">Devamını Oku</a>
+                </div>
+
+                <div class="icerik">
+                    <img src="img/kadinbasket.jpg" class="icerikresim" alt="">
+                    <h5>Kadın Basketbol Takımı</h5>
+                    <p class="iceriktext">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis sapiente consequatur optio
+                        blanditiis qui, dolorem maxime, reprehenderit facilis distinctio vitae, repudiandae magni
+                        voluptatum quis ad. Harum explicabo nisi soluta repudiandae quod at delectus minima voluptatum
+                        ipsam velit repellendus, amet expedita eligendi, optio reiciendis non molestias vitae fugiat
+                        fuga odit veritatis. Quidem at ex a voluptatum.
+                    </p>
+                    <a href="#" class="devamoku">Devamını Oku</a>
+                </div>
+
+                <div class="icerik">
+                    <img src="img/erkekbasket.jpg" class="icerikresim2" alt="">
+                    <h5>Erkek Basketbol Takımı</h5>
+                    <p class="iceriktext2">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis sapiente consequatur optio
+                        blanditiis qui, dolorem maxime, reprehenderit facilis distinctio vitae, repudiandae magni
+                        voluptatum quis ad. Harum explicabo nisi soluta repudiandae quod at delectus minima voluptatum
+                        ipsam velit repellendus, amet expedita eligendi, optio reiciendis non molestias vitae fugiat
+                        fuga odit veritatis. Quidem at ex a voluptatum.
+                    </p>
+                    <a href="#" class="devamoku">Devamını Oku</a>
+                </div>
+            </main>
+
+        </section>
+
+        <footer>Tüm Hakları Saklıdır &copy; | 2021 </footer>
+    </div>
 </body>
+
 </html>
